[build-system]
requires = ["setuptools>=70.2.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mycdp"
readme = "README.md"
dynamic = [
    "urls",
    "version",
    "license",
    "authors",
    "scripts",
    "classifiers",
    "description",
    "maintainers",
    "entry-points",
    "dependencies",
    "requires-python",
    "optional-dependencies",
]

[tool.setuptools]
packages = ["mycdp"]

[flake8]
ignore = ["W503"]
